# serializer version: 1
# name: TestBoxPlotTrendsQueryRunner.test_custom_event_name[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.amount, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.amount, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.amount, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.amount, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.amount, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.amount, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))), equals(e.event, 'purchase'))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_day_format_varies_by_interval_0_day[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_day_format_varies_by_interval_1_hour[new_events_schema]
  '''
  SELECT toStartOfHour(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 10:00:00', 'UTC')), toIntervalHour(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 12:00:00', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_day_format_varies_by_interval_2_minute[new_events_schema]
  '''
  SELECT toStartOfMinute(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 10:00:00', 'UTC')), toIntervalMinute(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 10:05:00', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_day_format_varies_by_interval_3_week[new_events_schema]
  '''
  SELECT toStartOfWeek(toTimeZone(e.timestamp, 'UTC'), 0) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-11-27 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-10 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_day_format_varies_by_interval_4_month[new_events_schema]
  '''
  SELECT toStartOfMonth(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-10-01 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-31 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_each_datum_has_label_and_day[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-03 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_filter_test_accounts_0_filter_test_accounts_off[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_filter_test_accounts_1_filter_test_accounts_on[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))), ifNull(notILike(toString(if(notEquals(JSONStripEmptyStringsAndNulls(toJSONString(e.person_properties.^email)), '{}'), JSONStripEmptyStringsAndNulls(toJSONString(e.person_properties.^email)), if(isNull(nullIf(toString(e.person_properties.email), '')), NULL, if(startsWith(dynamicType(accurateCast(e.person_properties.email, 'Dynamic')), 'DateTime'), concat(ifNull(toString(replaceOne(substring(toString(accurateCastOrNull(e.person_properties.email, 'DateTime64(9, \'UTC\')')), 1, 19), ' ', 'T')), ''), ifNull(toString(substring(toString(e.person_properties.email), 20, 10)), ''), 'Z'), if(or(startsWith(dynamicType(accurateCast(e.person_properties.email, 'Dynamic')), 'Array'), startsWith(dynamicType(accurateCast(e.person_properties.email, 'Dynamic')), 'Map'), startsWith(dynamicType(accurateCast(e.person_properties.email, 'Dynamic')), 'Tuple')), nullIf(nullIf(toJSONString(e.person_properties.email), '[]'), '{}'), toString(e.person_properties.email)))))), '%@posthog.com%'), 1))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_multiple_days_produce_separate_buckets_with_correct_stats[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-03 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_multiple_series_returns_data_for_each[new_events_schema.1]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.other_prop, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.other_prop, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.other_prop, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.other_prop, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.other_prop, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.other_prop, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))), equals(e.event, 'other_event'))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_multiple_series_returns_data_for_each[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_multiple_users_aggregate_within_same_day[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_no_data_fills_all_dates_with_zeros[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-08 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-10 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_none_property_values_become_zero_0_all_missing[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_none_property_values_become_zero_1_single_missing[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_property_filters_0_filter_chrome_only[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))), ifNull(equals(if(notEquals(JSONStripEmptyStringsAndNulls(toJSONString(e.properties.^`$browser`)), '{}'), JSONStripEmptyStringsAndNulls(toJSONString(e.properties.^`$browser`)), if(isNull(nullIf(toString(e.properties.`$browser`), '')), NULL, if(startsWith(dynamicType(accurateCast(e.properties.`$browser`, 'Dynamic')), 'DateTime'), concat(ifNull(toString(replaceOne(substring(toString(accurateCastOrNull(e.properties.`$browser`, 'DateTime64(9, \'UTC\')')), 1, 19), ' ', 'T')), ''), ifNull(toString(substring(toString(e.properties.`$browser`), 20, 10)), ''), 'Z'), if(or(startsWith(dynamicType(accurateCast(e.properties.`$browser`, 'Dynamic')), 'Array'), startsWith(dynamicType(accurateCast(e.properties.`$browser`, 'Dynamic')), 'Map'), startsWith(dynamicType(accurateCast(e.properties.`$browser`, 'Dynamic')), 'Tuple')), nullIf(nullIf(toJSONString(e.properties.`$browser`), '[]'), '{}'), toString(e.properties.`$browser`))))), 'Chrome'), 0))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_property_filters_1_filter_firefox_only[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))), ifNull(equals(if(notEquals(JSONStripEmptyStringsAndNulls(toJSONString(e.properties.^`$browser`)), '{}'), JSONStripEmptyStringsAndNulls(toJSONString(e.properties.^`$browser`)), if(isNull(nullIf(toString(e.properties.`$browser`), '')), NULL, if(startsWith(dynamicType(accurateCast(e.properties.`$browser`, 'Dynamic')), 'DateTime'), concat(ifNull(toString(replaceOne(substring(toString(accurateCastOrNull(e.properties.`$browser`, 'DateTime64(9, \'UTC\')')), 1, 19), ' ', 'T')), ''), ifNull(toString(substring(toString(e.properties.`$browser`), 20, 10)), ''), 'Z'), if(or(startsWith(dynamicType(accurateCast(e.properties.`$browser`, 'Dynamic')), 'Array'), startsWith(dynamicType(accurateCast(e.properties.`$browser`, 'Dynamic')), 'Map'), startsWith(dynamicType(accurateCast(e.properties.`$browser`, 'Dynamic')), 'Tuple')), nullIf(nullIf(toJSONString(e.properties.`$browser`), '[]'), '{}'), toString(e.properties.`$browser`))))), 'Firefox'), 0))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_property_filters_2_no_filter_sees_both[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_results_are_ordered_by_day_ascending[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-01 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-05 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_session_duration_produces_boxplot_data[new_events_schema]
  '''
  SELECT day_start AS day_start,
         min(accurateCastOrNull(session_duration, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(session_duration, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(session_duration, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(session_duration, 'Float64')) AS p75,
         max(accurateCastOrNull(session_duration, 'Float64')) AS max_val,
         avg(accurateCastOrNull(session_duration, 'Float64')) AS mean_val
  FROM
    (SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
            any(e__session.`$session_duration`) AS session_duration
     FROM events_json AS e
     LEFT JOIN
       (SELECT dateDiff('second', min(toTimeZone(raw_sessions.min_timestamp, 'UTC')), max(toTimeZone(raw_sessions.max_timestamp, 'UTC'))) AS `$session_duration`,
               raw_sessions.session_id_v7 AS session_id_v7
        FROM raw_sessions
        WHERE and(equals(raw_sessions.team_id, 99999), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(3))), lessOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), plus(assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC')), toIntervalDay(3))))
        GROUP BY raw_sessions.session_id_v7) AS e__session ON equals(toUInt128(toUUIDOrNull(e.properties.`$session_id`)), e__session.session_id_v7)
     WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))))
     GROUP BY e.properties.`$session_id`,
              day_start)
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_sparse_data_fills_missing_dates_with_zeros[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-01 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-07 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_statistics_for_distribution_0_uniform_distribution[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_statistics_for_distribution_1_single_value[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_statistics_for_distribution_2_two_values[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_statistics_for_distribution_3_identical_values[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_statistics_for_distribution_4_negative_values[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_statistics_for_distribution_5_large_values[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestBoxPlotTrendsQueryRunner.test_statistics_for_distribution_6_decimal_values[new_events_schema]
  '''
  SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start,
         min(accurateCastOrNull(e.properties.revenue, 'Float64')) AS min_val,
         quantile(0.25)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p25,
         quantile(0.5)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS median_val,
         quantile(0.75)(accurateCastOrNull(e.properties.revenue, 'Float64')) AS p75,
         max(accurateCastOrNull(e.properties.revenue, 'Float64')) AS max_val,
         avg(accurateCastOrNull(e.properties.revenue, 'Float64')) AS mean_val
  FROM events_json AS e
  WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-12-02 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-12-02 23:59:59', 'UTC'))))
  GROUP BY day_start
  ORDER BY day_start ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
